# erc20

./: .gitignore
pallets/erc20/: Cargo.toml  lib.rs
pallets/erc20/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/src/: lib.rs
